--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@ title: About
 <p>Hello! I'm Rafi, a first-year Computer Science student at UIUC. I started workig on my website on September 12th, so it's still under development, though I'm planning on having it finished by the end of this week. Below is some contact information.</p>
 
 <p>Email: <a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></p>
-<p>Github: <a href="https://github.com/42mileslong">42mileslong</a></p>
+<p><a href="https://github.com/42mileslong">Github</a></p>
+<p><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></p>
