Add resume to home

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ title: About
 <p>Hello! I'm Rafi, a first-year Computer Science student at UIUC. This website is currently under development, though I'm planning on having it finished soon. Below is some contact information.</p>
 
 <p>Email: <a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></p>
+<p><a href="http://rafilong.com/assets/docs/resume.pdf">Resume</a></p>
 <p><a href="https://github.com/42mileslong">Github</a></p>
 <p><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></p>
