--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: About
 
 <h1>Raphael Long</h1>
 
-<p>Hello! I'm Rafi, a first-year Computer Science student at UIUC. This website is currently under development, though I'm planning on having it finished soon. Below is some contact information.</p>
+<p>Hello! I'm Rafi, a first-year Computer Science student at UIUC. Below is some contact information.</p>
 
 <p><a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></p>
 <p><a href="http://rafilong.com/assets/docs/resume.pdf">Resume</a></p>
