Update Github username

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ title: About
 
 <p><a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></p>
 <p><a href="http://rafilong.com/assets/docs/resume.pdf">Resume</a></p>
-<p><a href="https://github.com/42mileslong">Github</a></p>
+<p><a href="https://github.com/rafilong">Github</a></p>
 <p><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></p>
