--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@ title: About
 
 <h1>Raphael Long</h1>
 
-<p>Hello! I'm Rafi, a first-year Computer Science student at UIUC. This website is currently under development, though I'm planning on having it finished soon. Below is some contact information.</p>
+<p>Hello! I'm Rafi, a first-year Computer Science student at UIUC.</p>
+<p><a href="/rpg/index.html">Here</a> is a small rpg I threw together in ink last year that is still looking for a permanent home.</p>
 
-<p>Email: <a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></p>
-<p><a href="https://github.com/42mileslong">Github</a></p>
-<p><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></p>
+<h3>Contact</h3>
+<ul>
+  <li>Email: <a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></li>
+  <li><a href="https://github.com/42mileslong">Github</a></li>
+  <li><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></li>
+</ul>
