--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: About
 <h3>Contact</h3>
 <ul>
   <li>Email: <a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></li>
+  <li><a href="/assets/docs/resume.pdf">Resume</a></li>
   <li><a href="https://github.com/rafilong">Github</a></li>
   <li><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></li>
 </ul>
