--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: About
 
 <h1>Raphael Long</h1>
 
-<p>Hello! I'm Rafi, a first-year Computer Science student at UIUC.</p>
+<p>Hello! I'm Rafi, a second-year Computer Science student at UIUC.</p>
 
 <h3>Contact</h3>
 <ul>
