--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@ title: About
 
 <h1>Raphael Long</h1>
 
-<p>Hello! I'm Rafi, a second-year Computer Science student at UIUC.</p>
+<p>Hello! I'm Rafi, a Computer Science student at UIUC.</p>
 
-<h3>Contact</h3>
 <ul>
-  <li>Email: <a href="mailto:rjlong2@illinois.edu">rjlong2@illinois.edu</a></li>
+  <li><a href="mailto:rjlong2@illinois.edu">Email</a></li>
   <li><a href="/assets/docs/resume.pdf">Resume</a></li>
   <li><a href="https://github.com/rafilong">Github</a></li>
   <li><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></li>
