--- a/index.html
+++ b/index.html
@@ -3,4 +3,13 @@ layout: default
 title: About
 ---
 
-What's up
+<h1>Raphael Long</h1>
+
+<p>Hello! I'm Rafi, a Computer Science student at UIUC.</p>
+
+<ul>
+  <li><a href="mailto:rjlong2@illinois.edu">Email</a></li>
+  <li><a href="/assets/docs/resume.pdf">Resume</a></li>
+  <li><a href="https://github.com/rafilong">Github</a></li>
+  <li><a href="https://linkedin.com/in/raphael-long">LinkedIn</a></li>
+</ul>
